add producr working

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -40,6 +40,17 @@
 
             </form>
         </div>
+
+        <div>
+            <h3>Lista de Produtos</h3>
+            <div>
+                
+                    <div>
+                        <%= products %>
+                    </div>
+                
+            </div>
+        </div>
     </main>
 </body>
 </html>
