cadastro de produto com foto corrigido, e página de produto mostrando os novos produtos cadastrados

--- a/views/products.ejs
+++ b/views/products.ejs
@@ -34,6 +34,7 @@
                         <div class="col-lg-4 item-product mt-4">    
                         <p> <%= item.productName %> </p>
                         <img <%= "src=images/uploads/" + item.photo %> >
+                        <p> <%= item.price %> </p>
                         </div>
                     <%}) %>
 
