--- a/views/newProduct.ejs
+++ b/views/newProduct.ejs
@@ -55,7 +55,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="photo">Foto do produto: </label>
-                    <input type="file" class="btn" name="photo" id="photo" >
+                    <input type="file" class="btn" name="photo">
                 </div>
                 <div>
                 <button type="submit" class="btn btn-warning">Cadastrar</button>
