--- a/views/newProduct.ejs
+++ b/views/newProduct.ejs
@@ -1,88 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="/stylesheets/product.css"> <!-- rel significa a relação. neste caso, importaremos um arquivo de estilo -->
+    <link rel="stylesheet" href="/stylesheets/product.css">
+    <!-- rel significa a relação. neste caso, importaremos um arquivo de estilo -->
     <title>Cadastrar Novo Produto</title>
 </head>
+
 <body>
     <header>
         <div class="the-container">
-            <a href="/"class="logo"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Fate_Zero_logo.png" height="100px" width="100px" alt="Logo Falso"></a> <!--o logo em forma de imagem está dentro do link-->
-        <div class="the-menu">
-            <nav class="menu">
-            <ul>
-                <li><a href="/">Início</a></li>
-                <li><a href="/about">Sobre</a></li>
-                <li><a href="/products">Você está aqui</a> 
-                <ul>
-                    <li><a href="/products/create">Cadastrar novo produto</a></li>
-                    <li><a href="/login">Login In</a></li>
-                    <li><a href="/register">Criar conta</a></li>
-                </ul>
-                </li></ul>
-            </nav>
-        </div>
+            <a href="/" class="logo"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Fate_Zero_logo.png" height="100px" width="100px" alt="Logo Falso"></a>
+            <!--o logo em forma de imagem está dentro do link-->
+            <div class="the-menu">
+                <nav class="menu">
+                    <ul>
+                        <li><a href="/">Início</a></li>
+                        <li><a href="/about">Sobre</a></li>
+                        <li><a href="/products">Você está aqui</a>
+                            <ul>
+                                <li><a href="/products/create">Cadastrar novo produto</a></li>
+                                <li><a href="/login">Login In</a></li>
+                                <li><a href="/register">Criar conta</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
     </header>
     <main class="register-container ">
-    <div class="container">
-        <div class="item col-6 mt-4">
-        <h1>Cadastro de Produto</h1>
+        <div class="container">
+            <div class="item col-6 mt-4">
+                <h1>Cadastro de Produto</h1>
 
-        
-            <h3>Formulário de cadastro</h3>
-            <form action="" method="post" enctype="multipart/form-data">
-                <div class="mb-3">
-                    <label for="productName" class="">Nome do produto*</label>
-                    <input name="productName" id="productName" type="text" class="form-control">
-                </div>
-                <div>
-                    <label for="price" class="">Preço*</label>
-                    <input name="price" id="price" type="number" class="form-control">
-                </div>
-                <div class="mb-3">
-                    <div>
-                      <label class="form-label">Tipo de produto:*</label>
+
+                <h3>Formulário de cadastro</h3>
+                <form action="" method="post" enctype="multipart/form-data">
+                    <div class="mb-3">
+                        <label for="productName" class="">Nome do produto*</label>
+                        <input name="productName" id="productName" type="text" class="form-control">
                     </div>
-                        <div class="">          
-                    <% types.forEach(function(type) {%>
-                            <input type="radio" name="type" id="<%= type.id %>" class="" value="<%= type.id %>" />
-                            <label for="<%= type.id %>" class=""> <%= type.label %> </label>
-                    <%}) %>
+                    <div>
+                        <label for="price" class="">Preço*</label>
+                        <input name="price" id="price" type="number" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <div>
+                            <label class="form-label">Tipo de produto:*</label>
                         </div>
-                </div>
-                <div class="mb-3">
-                    <label for="photo">Foto do produto: </label>
-                    <input type="file" class="btn" name="photo">
-                </div>
-                <div>
-                <button type="submit" class="btn btn-warning">Cadastrar</button>
-                <button type="reset" class="btn btn-warning">Resetar</button>
-                </div>
-                <div class="mt-3">
-                    <p>*Campo obrigatório</p>
-                </div>
-            </form>
+                        <div class="">
+                            <% types.forEach(function(type) {%>
+                                <input type="radio" name="type" id="<%= type.id %>" class="" value="<%= type.id %>" />
+                                <label for="<%= type.id %>" class=""> <%= type.label %> </label>
+                                <%}) %>
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="photo">Foto do produto: </label>
+                        <input type="file" class="btn" name="photo">
+                    </div>
+                    <div>
+                        <button type="submit" class="btn btn-warning">Cadastrar</button>
+                        <button type="reset" class="btn btn-warning">Resetar</button>
+                    </div>
+                    <div class="mt-3">
+                        <p>*Campo obrigatório</p>
+                    </div>
+                </form>
+            </div>
         </div>
-    </div>
         <div class="container">
             <div class="container-product">
-            <div class="col-12 mt-4"><h3>Lista de Produtos</h3></div>
-            
-                    <% products.forEach(function(item) {%>
-                        <div class="col-lg-4 item-product mt-4">    
-                        <p> <%= item.productName %> </p>
-                        <img <%= "src=../images/uploads/" + item.photo %> >
-                        </div>
+                <div class="col-12 mt-4">
+                    <h3>Lista de Produtos</h3>
+                </div>
+
+                <% products.forEach(function(item) {%>
+                    <div class="col-lg-4 item-product mt-4">
+                        <p>
+                            <%= item.productName %>
+                        </p>
+                        <img <%="src=../images/uploads/" + item.photo %> >
+
+                        <form action="<%= products.id %>?_method=DELETE" method="POST">
+                            <input type="submit" value="Excluir" class="btn btn-danger" />
+                        </form>
+                    </div>
                     <%}) %>
 
 
-                
+
             </div>
         </div>
     </main>
 </body>
+
 </html>
