--- a/views/products.ejs
+++ b/views/products.ejs
@@ -11,7 +11,8 @@
 <body>
     <%- include('./partials/header') %>
 
-        <h1>Produtos</h1>
+    <h1>Produtos</h1>
+    <main class="register-container ">
         <div class="container">
             <div class="container-product">
                 <div class="col-12 mt-4">
@@ -36,6 +37,7 @@
 
         </div>
 
+    </main>
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
