correção de bug no display do nome do produto

--- a/views/products.ejs
+++ b/views/products.ejs
@@ -22,7 +22,7 @@
                 <% products.forEach(function(item) {%>
                     <div class="col-lg-4 item-product mt-4">
                         <p>
-                            <%= item.productName %>
+                            <%= item.name %>
                         </p>
                         <img <%="src=images/uploads/" + item.photo %> >
                         <p>
