--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,7 +23,7 @@
                                 <input type="password" class="form-control" id="password" name="password"> <!-- Adicionei o name="password" para capturar esse dado no req.body -->
                             </div>
                             <div class="buttom">
-                                <button type="submit" class="btn btn-primary">Entrar</button>
+                                <button type="submit" class="btn btn-warning">Entrar</button>
                             </div>
                         </div>
                     </div>
