--- a/views/newProduct.ejs
+++ b/views/newProduct.ejs
@@ -65,7 +65,7 @@
                     </div>
                     <div>
                         <button type="submit" class="btn btn-warning">Cadastrar</button>
-                        <button type="reset" class="btn btn-warning">Resetar</button>
+                        <button type="reset" class="btn btn-light ms-1">Resetar</button>
                     </div>
                     <div class="mt-3">
                         <p>*Campo obrigatório</p>
