Adicionando CRUD update e delete

--- a/views/editProduct.ejs
+++ b/views/editProduct.ejs
@@ -45,7 +45,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="productName" class="">Nome do produto*</label>
-                        <input name="productName" id="productName" type="text" value="<%- tempProduct.productName %>" class="form-control" required>
+                        <input name="productName" id="productName" type="text" value="<%- tempProduct.name %>" class="form-control" required>
                     </div>
                     <div>
                         <label for="price" class="">Preço*</label>
