--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
     <div class="the-menu">
         <nav class="menu">
             <ul>
-                <li><a href="/">Você está aqui</a></li>
+                <li><a href="/">Início</a></li>
                 <li><a href="/about">Sobre</a></li>
                 <li><a href="/products">Produtos</a>
                     <ul>
@@ -17,4 +17,5 @@
             </ul>
         </nav>
     </div>
+    
 </div>
