--- a/views/products.ejs
+++ b/views/products.ejs
@@ -19,7 +19,7 @@
                 </div>
 
                 <% products.forEach(function(item) {%>
-                    <div class="col-lg-4 item-product mt-4">
+                    <div class="col-lg-4 item-product mt-4 product">
                         <p>
                             <%= item.name  %>
                         </p>
@@ -29,7 +29,7 @@
                         </p>
 
                     </div>
-                    <%}) %>
+                    <%}) %> 
 
             </div>
         </div>
