pagina de detalhes

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>sobre</title>
+    <title>Sobre - Squar</title>
     <link rel="stylesheet" href="/stylesheets/about.css">
 </head>
 
@@ -10,6 +10,27 @@
     <%- include('./partials/header') %>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-</body>
 
+    <!-- Sobre a Squar -->
+    <div class="principal">
+            <h2>Sobre Nós</h2>
+        <div>
+            <!-- <br/> pulando linha aqui -->
+            <p>
+                A Squar é um projeto de um Marketplace especializado em locação de equipamentos de informática (computadores, notebooks, celulares, entre outros).
+                A inspiração principal é criar uma forma de democratizar o acesso à tecnologia para uma maior parcela da população.
+                Além disso, as pessoas com equipamentos parados podem criar formas novas de renda ao alugar seus antigos equipamentos, o que incentiva o empreendedorismo e aumenta o ciclo de vida dos equipamentos e reduz o impacto ambiental ao utilizar melhor os recursos já criados.
+            </p>
+        </div>
+        <br/>
+            <h2>Nossa equipe</h2>
+        <div>
+            <!-- <br/> pulando linha aqui -->
+            <p>
+                A equipe da Squar é composta por pessoas. Como humanos, estamos sujeitos a cometer erros, acertos, melhorias diárias.
+                Diariamente buscamos tornar nosso produto o melhor possível para nossos clientes e investidores. Estamos sempre abertos a crítias (positivas e negativas) e queremos sempre dar o melhor apoio possível para os que contam conosco.
+            </p>
+        </div>
+    </div>
+</body>
 </html>
