--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -48,3 +48,13 @@
     padding-right: 20px;
     padding-left: 20px;
     } 
+
+.principal {
+    background-color: #ffff;
+    margin: 10px;
+    border: 40px solid transparent;
+}
+
+.principal h2 {
+    font-size: 25px;
+}
