--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,14 +60,15 @@
     <!-- Create your account -->
 
     <!-- About -->
-    <h3>SOBRE</h3>
+    <h3>INICIO???</h3>
     <div>
-        Projeto de um Marketplace especializado em locação de equipamentos de informática (Computadores, notebooks, celulares, entre outros).   
-        A inspiração principal é criar uma forma de democratizar o acesso à tecnologia para uma maior parcela da população.
-        Além disso, as pessoas com equipamentos parados podem criar formas novas de renda ao alugar seus antigos equipamentos,
-        o que incentiva o empreendedorismo e aumenta o ciclo de vida dos equipamentos e reduz o impacto ambiental ao utilizar melhor os recursos já criados.
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Platea dictumst quisque sagittis purus sit amet. Tempor nec feugiat nisl pretium fusce. Orci dapibus ultrices in iaculis nunc. Ultricies mi eget mauris pharetra et ultrices neque ornare aenean. Ornare lectus sit amet est placerat. Duis at consectetur lorem donec massa sapien. Sed elementum tempus egestas sed sed risus pretium quam. Sit amet luctus venenatis lectus. Neque aliquam vestibulum morbi blandit cursus risus at ultrices mi. Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque.
+        </p>
+        <p>
+            Aliquet risus feugiat in ante. Elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at augue. Fringilla ut morbi tincidunt augue interdum velit euismod in pellentesque. Donec et odio pellentesque diam volutpat commodo.
+        </p>
     </div>
-
 
 
     <!-- Footer -->
